--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"sourceMap": true,
+		"declarationMap": true,
 		"baseUrl": "./src",
 		"paths": {
 		  "~/*": ["./*"]
